--- a/views/inicio.ejs
+++ b/views/inicio.ejs
@@ -29,7 +29,7 @@
                   <th scope="col">id</th>
                   <th scope="col">autor</th>
                   <th scope="col">Publicacion</th>
-                  <th scope="col">Img</th>
+                  <th scope="col">fecha</th>
                   <th scope="col">Editar</th>
                   <th scope="col">Eliminar</th>
                 </tr>
@@ -40,7 +40,7 @@
                   <th scope="row"><%= item.id%></th>
                   <td><%= item.autor%></td>
                   <td><%= item.publicacion%></td>
-                  <td><%= item.img%></td>
+                  <td><%= item.fecha%></td>
                   <td>
                     <a
                       type="button"
