--- a/views/agregar.ejs
+++ b/views/agregar.ejs
@@ -27,7 +27,7 @@
         </div>
         <div class="mb-3">
           <label for="agregarImg" class="form-label">Url imagen</label>
-          <input type="url" class="form-control" id="redactarPublicacion" name="agregarImg">
+          <input type="url" class="form-control" id="agregarImg" name="agregarImg">
         </div>
         <button type="submit" class="btn btn-primary">Subir</button>
       </form>
