--- a/views/editar.ejs
+++ b/views/editar.ejs
@@ -27,7 +27,7 @@
         </div>
         <div class="mb-3">
           <label for="agregarImg" class="form-label">Url imagen</label>
-          <input type="url" class="form-control" id="redactarPublicacion" name="agregarImg" value="<%=edit.img%>">
+          <input type="text" class="form-control" id="agregarImg" name="agregarImg" value="<%=edit.img%>">
         </div>
         <button type="submit" class="btn btn-primary">Editar</button>
       </form>
