--- a/views/editar.ejs
+++ b/views/editar.ejs
@@ -27,17 +27,14 @@
         </div>
         <div class="mb-3">
           <label for="agregarImg" class="form-label">Url imagen</label>
-          <input type="text" class="form-control" id="agregarImg" name="agregarImg" value="<%=edit.img%>">
+          <input type="url" class="form-control" id="agregarImg" name="agregarImg" value="<%=edit.img%>">
         </div>
         <button type="submit" class="btn btn-primary">Editar</button>
       </form>
     </div>
-    <img src="<%=edit.img%>" alt="">
+    <img   src="<%=edit.img%>" alt="">
    </div>
   </div>
-  
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 </html>
