--- a/views/inicio.ejs
+++ b/views/inicio.ejs
@@ -1,74 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
-      crossorigin="anonymous"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link href="/stylesheets/style.css" rel="stylesheet" type="text/css" />
-  </head>
-  <body>
-    <div class="contenedor">
+</head>
+<body>
+    <div class="container">
         <div class="card">
-          <div class="card-body">
-            <h5 class="card-tittle">Foro</h5>
-            <br />
-            <a type="button" class="btn btn-primary" href="/agregar"
-              >Agragar Publicaion</a
-            >
-            <br />
-            <br />
-            <table class="table table-bordered" class="table-responsive">
-              <thead>
-                <tr>
-                  <th scope="col">id</th>
-                  <th scope="col">autor</th>
-                  <th scope="col">Publicacion</th>
-                  <th scope="col">fecha</th>
-                  <th scope="col">Editar</th>
-                  <th scope="col">Eliminar</th>
-                </tr>
-              </thead>
-              <tbody>
-                <% publi.forEach((item) => { %>
-                <tr>
-                  <th scope="row"><%= item.id%></th>
-                  <td><%= item.autor%></td>
-                  <td><%= item.publicacion%></td>
-                  <td><%= item.fecha%></td>
-                  <td>
-                    <a
-                      type="button"
-                      class="btn btn-success"
-                      href="/editar/<%= item.id%>"
-                      >Editar</a
-                    >
-                  </td>
-                  <td>
-                    <a
-                      type="button"
-                      class="btn btn-danger"
-                      href="/eliminar/<%= item.id%>"
-                      >Eliminar</a
-                    >
-                  </td>
-                </tr>
-                <% }) %>
-              </tbody>
-            </table>
+            <div class="card-body">
+                <h5 class="card-title">Foro</h5>
+                <br>
+                <a type="button" class="btn btn-primary" href="/agregar">Agragar Publicaion</a>
+                <br>
+                <br>
+                <div class="table-responsive"">
+                <table class="table table-bordered">
+                    <thead>
+                        <tr>
+                            <th scope="col" class="col-xs-2 col-md-1">id</th>
+                            <th scope="col" class="col-xs-3 col-md-2">autor</th>
+                            <th scope="col" class="col-xs-4 col-md-3">Publicacion</th>
+                            <th scope="col" class="col-xs-3 col-md-2">fecha</th>
+                            <th scope="col" class="col-xs-2 col-md-2">Accion
+                            </th>
+                        
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <% publi.forEach((item) => { %>
+                        <tr>
+                            <th scope="row"><%= item.id%></th>
+                            <td class="col-xs-3 col-md-2"><%= item.autor%></td>
+                            <td class="col-xs-4 col-md-3"><%= item.publicacion%></td>
+                            <td class="col-xs-3 col-md-2"><%= item.fecha%></td>
+                            <td class="col-xs-2 col-md-2">
+                                <a type="button" class="btn btn-success" href="/editar/<%= item.id%>">Editar</a>
+                                <a type="button" class="btn btn-danger" href="/eliminar/<%= item.id%>">Eliminar</a>
+                            </td>
+                        </tr>
+                        <% }) %>
+                    </tbody>
+                </table>
+                </div>
             </div>
         </div>
     </div>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+</body>
 </html>
