--- a/views/inicio.ejs
+++ b/views/inicio.ejs
@@ -16,7 +16,7 @@
                 <a type="button" class="btn btn-primary" href="/agregar">Agragar Publicaion</a>
                 <br>
                 <br>
-                <div class="table-responsive"">
+                <div class="table-responsive">
                 <table class="table table-bordered">
                     <thead>
                         <tr>
